feat: add slider section special

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     @include('partials/header.html')
     <main class="main">
       @include('partials/hero.html')
+      @include('partials/special.html')
     </main>
 
     @include('partials/footer.html')
