feat: add section raiting decstop

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <main class="main">
       @include('partials/hero.html')
       @include('partials/special.html')
+      @include('partials/rating.html')
     </main>
 
     @include('partials/footer.html')
