feat: add section categories and one card

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       @include('partials/special.html')
       @include('partials/rating.html')
       @include('partials/oxford.html')
+      @include('partials/categories.html')
     </main>
 
     @include('partials/footer.html')
