--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       @include('partials/rating.html')
       @include('partials/oxford.html')
       @include('partials/categories.html')
+      @include('partials/useful.html')
     </main>
 
     @include('partials/footer.html')
