feat: add section feedback and add form section feedback

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       @include('partials/oxford.html')
       @include('partials/categories.html')
       @include('partials/useful.html')
+      @include('partials/feedback.html')
     </main>
 
     @include('partials/footer.html')
