feat: add section suppliers and profit

--- a/src/interpreter.html
+++ b/src/interpreter.html
@@ -9,6 +9,7 @@
     <main class="main">
       @include('partials/interpreterBreadcrumbs.html')
       @include('partials/suppliers.html')
+      @include('partials/profit.html')
     </main>
     @include('partials/footer.html')
     <!-- @include('html/h1.html') пример include -->
