--- a/src/interpreter.html
+++ b/src/interpreter.html
@@ -11,6 +11,7 @@
       @include('partials/suppliers.html')
       @include('partials/profit.html')
       @include('partials/advantages.html')
+      @include('partials/guarantees.html')
     </main>
     @include('partials/footer.html')
     <!-- @include('html/h1.html') пример include -->
