--- a/src/contacts.html
+++ b/src/contacts.html
@@ -8,6 +8,7 @@
     @include('partials/header.html')
     <main class="main">
       @include('partials/contactsBreadcrumbs.html')
+      @include('partials/contacts.html')
     </main>
     @include('partials/footer.html')
     <!-- @include('html/h1.html') пример include -->
