--- a/src/catalog.html
+++ b/src/catalog.html
@@ -4,7 +4,7 @@
 @include('partials/head.html')
 
 <body class="page__body">
-  <div class="site-container">
+  <div class="site-container site-container--catalog">
     @include('partials/header.html')
     <main class="main">
       @include('partials/catalogBreadcrumbs.html')
