--- a/src/product.html
+++ b/src/product.html
@@ -7,7 +7,7 @@
   <div class="site-container">
     @include('partials/header.html')
     <main class="main">
-      
+      @include('partials/productD-31Breadcrumbs.html')
     </main>
     @include('partials/footer.html')
     <!-- @include('html/h1.html') пример include -->
