--- a/src/productD-31.html
+++ b/src/productD-31.html
@@ -9,6 +9,7 @@
     <main class="main">
       @include('partials/productD-31Breadcrumbs.html')
       @include('partials/productD-31Sections.html')
+      @include('partials/productD-31SimilarSections.html')
     </main>
     @include('partials/footer.html')
     <!-- @include('html/h1.html') пример include -->
