--- a/src/productD-31.html
+++ b/src/productD-31.html
@@ -4,7 +4,7 @@
 @include('partials/head.html')
 
 <body class="page__body">
-  <div class="site-container">
+  <div class="site-container site-container--product">
     @include('partials/header.html')
     <main class="main">
       @include('partials/productD-31Breadcrumbs.html')
