--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 @include('partials/head.html')
 
 <body class="page__body">
+  @include('partials/preloader.html')
   <div class="site-container">
     @include('partials/header.html')
     <main class="main">
