--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 @include('partials/head.html')
 
-<body class="page__body">
+<body class="page__body site-body">
   @include('partials/preloader.html')
   <div class="site-container">
     @include('partials/header.html')
