fix: refactor code modal

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     </main>
 
     @include('partials/footer.html')
+    @include('partials/productModal.html')
     <!-- @include('html/h1.html') пример include -->
   </div>
 </body>
