fix: refactor code all project in perfectPixel

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -5,7 +5,7 @@
 
 <body class="page__body site-body">
   @include('partials/preloader.html')
-  <div class="site-container">
+  <div class="site-container site-container--contact">
     @include('partials/header.html')
     <main class="main">
       @include('partials/contactsBreadcrumbs.html')
