--- a/src/interpreter.html
+++ b/src/interpreter.html
@@ -5,7 +5,7 @@
 
 <body class="page__body site-body">
   @include('partials/preloader.html')
-  <div class="site-container">
+  <div class="site-container site-container--interpreter">
     @include('partials/header.html')
     <main class="main">
       @include('partials/interpreterBreadcrumbs.html')
